# SANDM

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  sandm.qrc  version.cmake  version.hpp  version.hpp.in
.github/workflows/: cmake-multi-platform.yml
core/: CMakeLists.txt
core/include/: assembler.hpp  common_definitions.hpp  memory_manager.hpp  processor.hpp  processor_io.hpp  processor_observer.hpp  virtual_machine.hpp
core/include/core/: assembler.hpp  bytes.hpp  common_definitions.hpp  memory_manager.hpp  processor.hpp  processor_io.hpp  processor_observer.hpp  virtual_machine.hpp
core/src/: assembler.cpp  memory_manager.cpp  processor.cpp  virtual_machine.cpp
docs/: README.html
docs/examples/: bubble_sort(array).snm  factorial(n).snm  max(A, B).snm  max(array).snm  nested_loop.snm  print(str).snm  stack.snm
examples/: max(A, B).snm
gui/: CMakeLists.txt
gui/include/: code_editor.hpp  console.hpp  hex_spin_box.hpp  main_window.hpp  memory_model.hpp  register_editor.hpp  style_colors.hpp  syntax_highlighter.hpp  virtual_machine_controller.hpp
gui/include/gui/: code_editor.hpp  console.hpp  hex_spin_box.hpp  main_window.hpp  memory_model.hpp  memory_view.hpp  register_editor.hpp  spin_box_hoverable.hpp  style_colors.hpp  syntax_highlighter.hpp  virtual_machine_controller.hpp
gui/src/: code_editor.cpp  main_window.cpp  register_editor.cpp  virtual_machine_controller.cpp
icons/: sandm.icns
tests/: CMakeLists.txt  assembler_test.cpp  bytes_test.cpp  processor_test.cpp
